8341819: LightweightSynchronizer::enter_for races with deflation